[tool.poetry]
name = "sentry-deduplicate-integration"
version = "0.1.0"
description = ""
authors = ["Iuri de Silvio <iurisilvio@gmail.com>", "Erle Carrara"]
readme = "README.md"
packages = [{include = "sentry_deduplicate_integration"}]

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.12.0"

[tool.poetry.group.dev.dependencies]
flake8 = "<5"
pytest = "^7.2.0"
redislite = "^6.2.805324"
pytest-black = "^0.3.12"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
add-opts = "--cov --black --flake8"
